facet-macros-emit/tests/codegen/snapshots/r#mod__codegen__rename_all_screaming_kebabcase.snap
---
source: facet-macros-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        #[facet(rename_all = \"SCREAMING-KEBAB-CASE\")]\n        struct ScreamingKebabCaseExample {\n            field_one: String,\n            field_two: String,\n        }\n        \"#)"
---
static SCREAMING_KEBAB_CASE_EXAMPLE_SHAPE: &'static ::facet::Shape =
    <ScreamingKebabCaseExample as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for ScreamingKebabCaseExample {
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                {
                    ::facet::Field::builder()
                        .name("FIELD-ONE")
                        .shape(|| ::facet::shape_of(&|s: &ScreamingKebabCaseExample| &s.field_one))
                        .offset(::core::mem::offset_of!(
                            ScreamingKebabCaseExample,
                            field_one
                        ))
                        .build()
                },
                {
                    ::facet::Field::builder()
                        .name("FIELD-TWO")
                        .shape(|| ::facet::shape_of(&|s: &ScreamingKebabCaseExample| &s.field_two))
                        .offset(::core::mem::offset_of!(
                            ScreamingKebabCaseExample,
                            field_two
                        ))
                        .build()
                },
            ]
        };
        ::facet::Shape::builder_for_sized::<Self>()
            .vtable({
                let mut vtable =
                    ::facet::value_vtable!(Self, |f, _opts| ::core::fmt::Write::write_str(
                        f,
                        "ScreamingKebabCaseExample"
                    ));
                vtable
            })
            .type_identifier("ScreamingKebabCaseExample")
            .ty(::facet::Type::User(::facet::UserType::Struct(
                ::facet::StructType::builder()
                    .repr(::facet::Repr::default())
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            )))
            .build()
    };
}
